Modify: fix double border and resize card

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -43,7 +43,7 @@
 }
 
 @media screen and (max-width: 425px) {
-  .card {
+  .card canvas {
     border: 2px solid var(--main-color);
   }
 }
